changes in ui n backend